# training-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: auth.py  auth_events.py  backup.py  cli.py  config.py  database.py  main.py  plan_validation.py  rate_limit.py  schedule_utils.py  security.py  tenancy.py  validation_service.py  version.py  workout_summary.py
backend/app/models/: __init__.py  action.py  api_token.py  auth_event.py  feedback.py  health_metrics.py  inventory.py  plan.py  plan_note.py  queue.py  user.py  workout.py
backend/app/routes/: actions.py  admin.py  auth.py  dashboard.py  feedback.py  health.py  health_metrics.py  inventory.py  plan_notes.py  plans.py  queue.py  schedule.py  workouts.py
backend/app/schemas/: action.py  feedback.py  health_metrics.py  inventory.py  plan.py  plan_note.py  queue.py  validation.py  (+1 more)
backend/config/: .env.example
backend/migrations/: env.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_auth_admin.py  test_backup.py  test_health.py  test_inventory_synced_at.py  test_isolation.py  test_plan_complete.py  test_plan_note_kinds.py  test_plan_validation.py  test_queue_app_sync.py  test_queue_skip.py  test_setup.py  test_token_rejected.py  test_token_user_agent.py  test_workout_context.py  test_workout_detail_samples.py  test_workout_series_bounds.py
mcp/: pyproject.toml
mcp/app/: config.py  main.py  schemas.py  wire.py
mcp/config/: .env.example
(+92 files in other folders)
