[project]
name = "training-api"
version = "0.1.0"
description = "Workout data store and training queue API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "alembic>=1.14",
    "uvicorn>=0.34",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
